Fix: Edit z-index for modal

--- a/rave_reviews/static/css/style.css
+++ b/rave_reviews/static/css/style.css
@@ -241,7 +241,7 @@ body {
     display: none;
     animation:fadein 0.5s;
     padding: 20px;
-    z-index: 1;
+    z-index: 2;
 }
 
 .review-modal h2 {
@@ -256,4 +256,5 @@ body {
     height:100vh;
     background-color:rgba(0,0,0,0.7);
     display: none;
+    z-index: 1;
 }
